--- a/package.json
+++ b/package.json
@@ -8,7 +8,19 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "@apollo/react-hooks": "^3.1.2",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
+    "apollo-server": "^2.9.6",
+    "babel-plugin-emotion": "^10.0.29",
+    "flexboxgrid": "^6.3.1",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
